--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
-cmake_minimum_required(VERSION 3.25)
+cmake_minimum_required(VERSION 3.22)
 project(executor2)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(executor2 main.cpp task_manager.cpp input_parser.cpp task.cpp utils.cpp)
+add_executable(executor main.cpp task_manager.cpp input_parser.cpp task.cpp utils.h)
+
