--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,5 @@ project(executor2)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(executor main.cpp task_manager.cpp input_parser.cpp task.cpp utils.h)
+add_executable(executor main.cpp task_manager.cpp input_parser.cpp task.cpp)
 
